refactor: remove FraudDetectionHandler and fix SOLID/quality issues
- Remove FraudDetectionHandler (had OCP violation with hardcoded method names)
- Chain simplified to ValidationHandler -> PaymentProcessingHandler
- Replace @Data with @Getter/@Setter on Payment entity (JPA best practice)
- Remove unused repository methods (YAGNI)
- Remove unused metadata field from Payment entity
- Remove verbose/AI-looking javadocs from controller and config
- Use Collections.unmodifiableList instead of List.copyOf in registry